--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(ng-app='myApp')
+html(ng-app='App')
   head
     meta(charset='utf-8')
     title MEAN Boilerplate
@@ -13,5 +13,7 @@ html(ng-app='myApp')
   script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js')
   script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js')
   script(src='./main.js')
-  script(src='./services.js')
-  script(src='./controllers.js')
+  script(src='./routes/authRoutes.js')
+  script(src='./services/httpService.js')
+  script(src='./services/authService.js')
+  script(src='./controllers/authController.js')
